Closed Bug 1825285 Opened 2 years ago Closed 2 years ago

error: cannot convert between vector type 'xsimd::types::simd_register<float, xsimd::avx>::register_type' and vector type 'xsimd::types::simd_register<float, xsimd::sse2>::register_type'

Categories

(Firefox :: Translations, defect)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox111 --- unaffected
firefox112 --- unaffected
firefox113 --- fixed

People

(Reporter: RyanVM, Assigned: sergesanspaille)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Seeing the below trying to build m-c tip today. Possibly relevant, I have ac_add_options --enable-optimize="-O2 -arch:AVX2" included in my mozconfig.

In file included from third_party/gemmology/kernels/GemmologyEngineSSE2.cpp:6:
third_party/gemmology\gemmology.h(971,26): error: cannot convert between vector type 'xsimd::types::simd_register<float, xsimd::avx>::register_type' (aka '__m256') and vector type 'xsimd::types::simd_register<float, xsimd::sse2>::register_type' (aka '__m128') as implicit conversion would cause truncation
      std::get<0>(total) + xsimd::load_aligned(bias_addr + col_idx + 0),
                         ^
third_party/gemmology\gemmology.h(1022,21): note: in instantiation of function template specialization 'gemmology::callbacks::AddBias::operator()<xsimd::sse2>' requested here
  auto bias_added = add_bias(unquantized, row_idx, col_idx, col_size);
                    ^
third_party/gemmology\gemmology.h(1261,7): note: in instantiation of function template specialization 'gemmology::callbacks::UnquantizeAndAddBiasAndWrite::operator()<std::tuple<xsimd::batch<int, xsimd::sse2>, xsimd::batch<int, xsimd::sse2>>>' requested here
      callback(total, A_rowidx, B0_colidx, B_cols);
      ^
third_party/gemmology/kernels/GemmologyEngineSSE2.cpp(13,43): note: in instantiation of function template specialization 'gemmology::Engine<xsimd::sse2>::Shift::Multiply<gemmology::callbacks::UnquantizeAndAddBiasAndWrite>' requested here
template void Engine<xsimd::sse2>::Shift::Multiply(
                                          ^
1 error generated.

Set release status flags based on info from the regressing bug 1815790

:sergesanspaille, since you are the author of the regressor, bug 1815790, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Otherwise we end up with potentially invalid configuration when
generating code for specific architectures.

Assignee: nobody → sguelton
Attachment #9325712 - Attachment description: WIP: Bug 1825285 - Do not use implicit arch parameter when loading → Bug 1825285 - Do not use implicit arch parameter when loading r=ryanvm
Status: NEW → ASSIGNED
Severity: -- → S3
Flags: needinfo?(sguelton)
Pushed by rvandermeulen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d0208131327c Do not use implicit arch parameter when loading r=RyanVM
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: