Bug 1825285 - Do not use implicit arch parameter when loading r=RyanVM

Otherwise we end up with potentially invalid configuration when
generating code for specific architectures.

Differential Revision: https://phabricator.services.mozilla.com/D173965